cmake_minimum_required(VERSION 3.8)
project(Operation_System)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        zjunix/arch/mips32/arch.c
        zjunix/arch/mips32/arch.h
        zjunix/arch/mips32/exc.c
        zjunix/arch/mips32/exc.h
        zjunix/arch/mips32/intr.c
        zjunix/arch/mips32/intr.h
        zjunix/arch/mips32/page.c
        zjunix/arch/mips32/page.h
        zjunix/config/debug.h
        zjunix/include/driver/ps2.h
        zjunix/include/driver/sd.h
        zjunix/include/driver/vga.h
        zjunix/include/zjunix/fs/fat.h
        zjunix/include/zjunix/fs/fscache.h
        zjunix/include/zjunix/bootmm.h
        zjunix/include/zjunix/buddy.h
        zjunix/include/zjunix/list.h
        zjunix/include/zjunix/lock.h
        zjunix/include/zjunix/log.h
        zjunix/include/zjunix/pc.h
        zjunix/include/zjunix/slab.h
        zjunix/include/zjunix/slub.h
        zjunix/include/zjunix/syscall.h
        zjunix/include/zjunix/time.h
        zjunix/include/zjunix/type.h
        zjunix/include/zjunix/utils.h
        zjunix/include/assert.h
        zjunix/kernel/driver/ps2.c
        zjunix/kernel/driver/ps2.h
        zjunix/kernel/driver/sd.c
        zjunix/kernel/driver/sd.h
        zjunix/kernel/driver/vga.c
        zjunix/kernel/driver/vga.h
        zjunix/kernel/fs/fat/debug.c
        zjunix/kernel/fs/fat/debug.h
        zjunix/kernel/fs/fat/dir.c
        zjunix/kernel/fs/fat/dir.h
        zjunix/kernel/fs/fat/fat.c
        zjunix/kernel/fs/fat/fat.h
        zjunix/kernel/fs/fat/usr.c
        zjunix/kernel/fs/fat/utils.c
        zjunix/kernel/fs/fat/utils.h
        zjunix/kernel/fs/fscache/fscache.c
        zjunix/kernel/fs/fscache/fscache.h
        zjunix/kernel/lock/lock.c
        zjunix/kernel/lock/lock.h
        zjunix/kernel/mm/bootmm.c
        zjunix/kernel/mm/buddy.c
        zjunix/kernel/mm/slab.c
        zjunix/kernel/pc/pc.c
        zjunix/kernel/pc/pc.h
        zjunix/kernel/syscall/syscall.c
        zjunix/kernel/syscall/syscall4.c
        zjunix/kernel/syscall/syscall4.h
        zjunix/kernel/time/time.c
        zjunix/kernel/time/time.h
        zjunix/kernel/init.c
        zjunix/usr/exec.c
        zjunix/usr/exec.h
        zjunix/usr/ls.c
        zjunix/usr/ls.h
        zjunix/usr/myvi.c
        zjunix/usr/myvi.h
        zjunix/usr/ps.c
        zjunix/usr/ps.h
        zjunix/utils/assert.c
        zjunix/utils/log.c
        zjunix/utils/utils.c
        zjunix/.gitignore
        zjunix/LICENSE
        zjunix/Makefile
        zjunix/README.md
        README.md zjunix/kernel/fs/ext3/mkdir/mkdir.h zjunix/kernel/fs/ext3/mkdir/mkdir.c zjunix/kernel/fs/ext3/cat/cat.c zjunix/kernel/fs/ext3/cat/cat.h zjunix/kernel/fs/ext3/ls/ls.c zjunix/kernel/fs/ext3/ls/ls.h zjunix/kernel/fs/ext3/rm/rm.c zjunix/kernel/fs/ext3/rm/rm.h zjunix/kernel/fs/ext3/mv/mv.c zjunix/kernel/fs/ext3/mv/mv.h zjunix/kernel/fs/ext3/cd/cd.c zjunix/kernel/fs/ext3/cd/cd.h)

add_executable(Operation_System ${SOURCE_FILES})